# DABPROJECT

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
dab_project/: databricks.yml  requirements-dbc.in  requirements-dbc.txt  requirements-pyspark.txt
dab_project/citibike_etl/notebooks/01_bronze/: 01_bronze_citibike.ipynb
dab_project/citibike_etl/notebooks/02_silver/: 02_silver_citibike.ipynb
dab_project/citibike_etl/notebooks/03_gold/: 03_gold_citibike_daily_ride_summary.ipynb  03_gold_citibike_daily_station_performance.ipynb
dab_project/resources/: citibike_etl_pipeline.dlt.yml  citibike_etl_pipeline_nb.job.yml  citibike_etl_pipeline_py.job.yml  pipelines.yml
dab_project/tests/: conftest.py  test_citibike_utils.py  test_datetime_utils.py
notebooks/: notebook_1.ipynb  notebook_2.ipynb
resources/: demo_job.job.yml
scratch/: README.md
scripts/: temp.py
